# my-dashboard

./: Cargo.toml  Makefile  README.md  architecture.md  docker-compose.yaml  otel-collector-config.yaml  requirements.md
.agents/agents/architect/: agent.yaml
.agents/agents/ba_token_optimizer/: agent.yaml
.agents/agents/dev_executor/: agent.yaml
.agents/agents/dev_reviewer/: agent.yaml
.agents/agents/devops/: agent.yaml
.agents/agents/platform_sre/: agent.yaml
.agents/agents/qa/: agent.yaml
.agents/agents/researcher/: agent.yaml
.agents/agents/security/: agent.yaml
.agents/skills/architect/: adr_writing.yaml
.agents/skills/ba_token_optimizer/: requirement_extraction.yaml
.agents/skills/dev_executor/: tdd_implementation.yaml
.agents/skills/devops/: progressive_delivery.yaml
.agents/skills/platform_sre/: slo_definition.yaml
.agents/skills/qa/: performance_testing.yaml
.agents/skills/researcher/: technology_evaluation.yaml
.agents/skills/security/: threat_modeling.yaml
.agents/workflows/: feature_development.yaml  hotfix.yaml  research_spike.yaml  security_audit.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_initial_schema.sql  0002_dynamic_schema.sql  0003_dde_visibility_and_indexes.sql
backend/src/: audit.rs  dde.rs  error.rs  ingest.rs  lib.rs  main.rs  seed.rs
backend/tests/: audit_tests.rs  dde_tests.rs  ingest_tests.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: DDE_GUIDE.md  EXAMPLES.md  installation.md  refactor_req_dde.md  security-audit-report.md
docs/adr/: 0001-storage-strategy-postgresql-jsonb.md  0002-metric-aggregation-hdrhistogram.md  0003-frontend-rendering-leptos-wasm.md  0004-cryptographic-audit-trail.md  0005-dynamic-schema-metastore.md  0006-dde-admin-and-discovery.md
examples/: sensor_telemetry.json  validate_dde.rs  validate_integrity.rs
frontend/: Cargo.toml
frontend/src/: admin_dde.rs  lib.rs
(+6 files in other folders)
