[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.28.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.28.0", features = ["metrics", "grpc-tonic", "http-proto"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
metrics = "0.24"
hdrhistogram = "7.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
dashmap = "6.1.0"
csv = "1.3.1"
bytes = "1.9.0"
futures-util = "0.3"
common = { path = "../common" }
