[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.6" }
leptos_meta = { version = "0.7.6" }
leptos_router = { version = "0.7.6" }
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
console_error_panic_hook = "0.1"
tracing = "0.1"
leptos-chartistry = "0.2"
leptos-use = "0.15"
gloo-net = "0.6"
wasm-bindgen = "0.2"
chrono = { version = "0.4.39", features = ["serde"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
